# patient_contact

patient_contact/: pyproject.toml
patient_contact/patient_contact/: patient_contact.py  run_patient_contact_script.sh  test_data.csv  test_p_c.ipynb
