[tool.poetry]
name = "patient-contact"
version = "0.1.0"
description = ""
authors = ["lgarbar <daniel.garciabarnett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
